--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -40,6 +40,8 @@ zh-TW:
     back_page        : '上一頁'
     continue         : '繼續'
     buy              : '購買商品'
+    preview          : '預覽'
+    production_view  : '正式'
 
     successfully_created : '新增成功' # Your profile was successfully created.
     successfully_updated : '更新成功' # Your profile was successfully updated.
@@ -75,6 +77,7 @@ zh-TW:
       product:
         info:       '商品資訊'
         name:       '商品名稱'
+        desc:       '描述'
         url:        '商品連結'
         banner:     '商品圖片'
     placeholders:
