Refine - Refine homepage meta

--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -15,6 +15,10 @@ zh-TW:
   event:        '活動項目'
   product:      '商品列表'
 
+  meta:
+    desc:     '最新最狂的推薦商品清單；沒有最強只有最狂，精準的時尚、衣著、3C各類商品推薦一次推薦你，讓你不再錯過任何重要商品。'
+    keywords: '最強,最狂,就是狂,推薦,流行,時尚,彩妝'
+
   helpers:
     you_are_here     : '目前在:'
     are_you_sure     : '確定刪除嗎?'
