--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -96,7 +96,8 @@ zh-TW:
         name:           '商品名稱'
         desc:           '描述'
         url:            '商品連結'
-        banner:         '商品圖片'
+        banner:         '商品圖片 - 建議圖片為方型'
+        banner_abbr:    '商品圖片'
         banner_style:   '商品圖片顯示色系'
         redirects:
           yahoo:
