Add - Add backend resources infos

--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -14,6 +14,7 @@ zh-TW:
   dashboard:    'Dashboard'
   event:        '活動項目'
   product:      '商品列表'
+  info:         '相關資料'
 
   meta:
     desc:     '最新最狂的推薦商品清單；沒有最強只有最狂，精準的時尚、衣著、3C各類商品推薦一次推薦你，讓你不再錯過任何重要商品。'
