Refine - Refine SEO desc

--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -17,8 +17,8 @@ zh-TW:
   info:         '相關資料'
 
   meta:
-    desc:     '最新最狂的推薦商品清單；沒有最強只有最狂，精準的時尚、衣著、3C各類商品推薦一次推薦你，讓你不再錯過任何重要商品。'
-    keywords: '最強,最狂,就是狂,推薦,流行,時尚,彩妝'
+    desc:     '所有最新最狂的推薦商品清單全都在這；最精準的時尚、衣著、3C各類商品，部落客、網友一致公認最推薦清單一次推薦你，讓你不再錯過任何重要商品。'
+    keywords: '最強,最狂,就是狂,推薦,流行,時尚,彩妝,家電'
 
   helpers:
     you_are_here     : '目前在:'
